@@ -269,6 +269,15 @@ Changes:
 Date : 01.03.2011 | Release : 0.6.19    | Author  : H.Weber | CVS:454
 ----------------------------------------------------------------------------------------------------
 
+Changes:
+
 - Initial-Work for release named "Avatar"
+
+
+Fixes:
+
+- verbose-mode logging had a failure inside osrun
+
+
 
 
